# tgbittrexbot

./: #bitt_api.cpp#  .gitignore  CMakeCache.txt  CMakeLists.txt  Currency  Currency.cbp  Makefile  README.md  api_request.cpp  api_request.h  bitt_api.cpp  bitt_api.h  cmake_install.cmake  local.db  local_db.cpp  local_db.h  main.cpp  pipe_db_api.cpp  pipe_db_api.h  telegram_api.cpp  telegram_api.h
models/: user.cpp  user.h
tests/: unit_tests.cpp
